--- a/PhysicProject/PhysicProject.vcxproj.filters
+++ b/PhysicProject/PhysicProject.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="CollisionHandler.h">
       <Filter>Header Files\Collision</Filter>
     </ClInclude>
+    <ClInclude Include="Dispatcher.h">
+      <Filter>Header Files\Util</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
