--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -87,8 +87,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="DepthShader.cpp" />
-    <ClCompile Include="Light.cpp" />
-    <ClCompile Include="RenderTexture.cpp" />
+    <ClCompile Include="LightManager.cpp" />
+    <ClCompile Include="RenderToTexture.cpp" />
     <ClCompile Include="ShadowShader.cpp" />
     <ClCompile Include="ApplicationManager.cpp" />
     <ClCompile Include="Camera.cpp" />
@@ -101,9 +101,9 @@
     <ClCompile Include="PositionManager.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
     <ClCompile Include="SystemManager.cpp" />
-    <ClCompile Include="TerrainManager.cpp" />
+    <ClCompile Include="Terrain.cpp" />
     <ClCompile Include="TextureClass.cpp" />
-    <ClCompile Include="TimerManager.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -118,8 +118,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DepthShader.h" />
-    <ClInclude Include="Light.h" />
-    <ClInclude Include="RenderTexture.h" />
+    <ClInclude Include="LightManager.h" />
+    <ClInclude Include="RenderToTexture.h" />
     <ClInclude Include="ShadowShader.h" />
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="Camera.h" />
@@ -132,9 +132,9 @@
     <ClInclude Include="PositionManager.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="SystemManager.h" />
-    <ClInclude Include="TerrainManager.h" />
+    <ClInclude Include="Terrain.h" />
     <ClInclude Include="TextureClass.h" />
-    <ClInclude Include="TimerManager.h" />
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
