--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="DepthShader.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="RenderTexture.cpp" />
+    <ClCompile Include="shadermanagerclass.cpp" />
     <ClCompile Include="ShadowShader.cpp" />
     <ClCompile Include="ApplicationManager.cpp" />
     <ClCompile Include="Camera.cpp" />
@@ -103,6 +104,7 @@
     <ClCompile Include="SystemManager.cpp" />
     <ClCompile Include="TerrainManager.cpp" />
     <ClCompile Include="TextureClass.cpp" />
+    <ClCompile Include="textureshaderclass.cpp" />
     <ClCompile Include="TimerManager.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
@@ -120,6 +122,7 @@
     <ClInclude Include="DepthShader.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="RenderTexture.h" />
+    <ClInclude Include="shadermanagerclass.h" />
     <ClInclude Include="ShadowShader.h" />
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="Camera.h" />
@@ -134,6 +137,7 @@
     <ClInclude Include="SystemManager.h" />
     <ClInclude Include="TerrainManager.h" />
     <ClInclude Include="TextureClass.h" />
+    <ClInclude Include="textureshaderclass.h" />
     <ClInclude Include="TimerManager.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
